Working on homepage

--- a/square-root/src/App.sass
+++ b/square-root/src/App.sass
@@ -15,7 +15,7 @@ $white: #f9f9f9
 $darker: #242526
 
 // Update Bulma's global variables
-$family-sans-serif: 'Nunito', sans-serif
+$family-sans-serif: 'Poppins', sans-serif
 $grey-dark: $brown
 $grey-light: $beige-light
 $primary: $purple
