--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -245,18 +245,37 @@ Smooth Scroll --------*/
 }
 
 .front-container section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
   width: 100%;
   height: 100vh; /*for all browser sizes*/
   scroll-snap-align: center;
 }
 
-section h1 {
-  font-size: 4rem;
+section h1{
+  color:white;
+  font-size:80px;
+  font-weight: 700px;
+  font-style: italic;
+  padding-left:5%;
+}
+
+.action-btn{
+  background: none;
+  border: none;
+  color: white;
+  font-size:30px;
+  font-weight: 700px;
+  font-style: italic;
+  padding-left:5%;
+}
+
+.flex-container{
+  display:flex;
+  float:right;
+  flex-direction:row;
+  position: absolute;
+  bottom: 15%;
+  width: 100%;
+  padding:2%;
 }
 
 section p {
@@ -289,26 +308,10 @@ section#fourth {
 }
 
 section#fifth {
-  background-image: url("../images/landscape--indoor.jpg");
+  background-image: url("../images/landscape--indoor2.jpg");
   background-size: cover;
   position:relative;
 }
 
-.front-btn{
-  color:white;
-  background:none;
-  border:none;
-  position:absolute;
-  bottom: 15%;
-  top: 65%;
-  left: 60%;
-  right:10%;
-  height: 15%;
-  width: 40%;
-}
 
-.front-btn h1{
-  font-size:60px;
-  font-weight: 700px;
-  
-}
+
