--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -319,16 +319,6 @@ display: inline-block;
         order:2;
     }
 }
-.c-grid--2x2{
-    display:grid;
-}
-
-@media (min-width:768px){
-    .c-grid--2x2{
-        grid-template-columns:1fr 1fr;
-    }
-}
-
 
 
 .c-grid--3x1{
@@ -337,13 +327,45 @@ display: inline-block;
     grid-gap:clamp(24px,2.9282576867vw,40px);
 }
 
-.c-grid--3x2{
+
+/*GRID 2x2 */
+.c-grid--2x2{
     display:grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: max-content max-content;
     grid-template-columns: 1fr 1fr;
-    grid-gap:clamp(24px,2.9282576867vw,40px);
     height:fit-content;
+    width:100%;
+    /*grid-gap:clamp(24px,2.9282576867vw,40px);*/
 }
+
+@media (min-width:768px){
+    .c-grid--2x2{
+        grid-template-columns:1fr 1fr;
+    }
+}
+
+.item1--2x2{
+    grid-column: 1;
+    grid-row:1;
+  }
+  
+  .item2--2x2{
+    grid-column:1;
+    grid-row:2;
+  }
+  
+  .item3--2x2 {
+    grid-column:2;
+    grid-row:1;
+  }
+  
+  .item4--2x2 {
+    grid-column:2;
+    grid-row:2;
+  }
+
+  /*END OF GRID */
+
 
 .c-grid--span{
     display:grid;
@@ -492,7 +514,10 @@ color:white;
 
 .u-mrg--txt1{
     margin-top:24px;
+}
 
+.u-mrg--txt3{
+    margin-top:15px;
 }
 
 .background-grey{
